k8s/solution3-multi-cluster-ilb-setup/_ORIGINAL/cluster1/cluster1-gateway-config.yaml
# to be applied to Cluster1
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1alpha2
metadata:
  name: dmarzi-apps-http
spec:
  gatewayClassName: gke-l7-rilb-mc
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      kinds:
      - kind: HTTPRoute
      namespaces:
        from: Selector
        selector:
          matchLabels:
            gateway: dmarzi-apps-http
